# controllers/users.go
@@ -16,7 +16,7 @@ import (
 // @Accept       json
 // @Produce      json
 // @Success      200  {object}  utils.Response  "List of all users"
-// @Router       /users/list-all [get]
+// @Router       /users [get]
 func ListAllUsers(ctx *gin.Context) {
 	users, err := models.FindAllUsers()
 
